--- a/charts/microservices-runtime/Chart.yaml
+++ b/charts/microservices-runtime/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: microservices-runtime
-description: A Helm chart for Kubernetes
+description: webMethods Microservices Runtime with MySQL Database
 
 # A chart can be either an 'application' or a 'library' chart.
 #
