--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
               fi
           done
           helm repo index --url https://sag-private-cloud.github.io/private-cloud-helm-charts/ docs
+          git config --global user.email "SAGPrivateCloudBot@softwareag.com"
+          git config --global user.name "SAG Private Cloud Bot"
           git add .
           git commit -m "Updating charts repository"
           git push
