--- a/microservicesruntime/templates/hpa.yaml
+++ b/microservicesruntime/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "universalmessaging-server.fullname" . }}
+  name: {{ include "microservicesruntime.fullname" . }}
   labels:
-    {{- include "universalmessaging-server.labels" . | nindent 4 }}
+    {{- include "microservicesruntime.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "universalmessaging-server.fullname" . }}
+    name: {{ include "microservicesruntime.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
