--- a/microservicesruntime/templates/serviceaccount.yaml
+++ b/microservicesruntime/templates/serviceaccount.yaml
@@ -2,10 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "microservices-runtime.serviceAccountName" . }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "microservicesruntime.serviceAccountName" . }}
   labels:
-    {{- include "microservices-runtime.labels" . | nindent 4 }}
+    {{- include "microservicesruntime.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
