--- a/microservicesruntime/values.yaml
+++ b/microservicesruntime/values.yaml
@@ -1,13 +1,14 @@
-# Default values for microservices-runtime.
+# Default values for microservicesruntime.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
-msr:
-  image: 'sagcr.azurecr.io/esbmsr:11.0'
 image:
+  repository: sagcr.azurecr.io/webmethods-microservicesruntime
   pullPolicy: Always
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: ""
 
 imagePullSecrets:
   - name: regcred
@@ -23,12 +24,10 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-keepsecretondelete: true
-
 podAnnotations: {}
 
-podSecurityContext:
-  fsGroup: 1724
+podSecurityContext: {}
+  # fsGroup: 2000
 
 securityContext: {}
   # capabilities:
@@ -36,36 +35,27 @@ securityContext: {}
   #   - ALL
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
-# runAsUser: 1000
+  # runAsUser: 1000
 
 service:
   type: ClusterIP
-  #type: LoadBalancer
   port: 5555
-externalFiles:
-  properties: ""
-mysql:
-  enabled: true
-  image: mysql
-  tag: "8.0"
-  service:
-    type: CLusterIP
-    port: 3306
-  storage:  # storage class for mysql
-    size: 1Gi
-    storageClassName: local-path
-    accessMode: ReadWriteOnce
-  keepsecretondelete: true
+
 ingress:
-  enabled: true
+  enabled: false
   className: ""
-  annotations:
-    kubernetes.io/ingress.class: traefik
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: msr.flint-tech-solutions.com
+    - host: chart-example.local
       paths:
         - path: /
-          pathType: Prefix
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -78,8 +68,15 @@ resources: {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
-  #requests:
-#memory: "16Gi"
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
+
+nodeSelector: {}
 
 tolerations: []
 
