--- a/integrationserver/values.yaml
+++ b/integrationserver/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: sagcr.azurecr.io/webmethods-integrationserver
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
