--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@softwareag/dlt": "^22.1.0",
     "bootstrap": "4.4.1",
+    "compare-versions": "^6.1.0",
     "jquery": "^3.6.0",
     "js-yaml": "^4.0.0",
     "marked": "^12.0.1",
