--- a/.github/workflows/refresh-chart-repo.yml
+++ b/.github/workflows/refresh-chart-repo.yml
@@ -10,8 +10,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
+        
       - name: Checkout main
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #v4.1.1
         with:
@@ -46,11 +46,6 @@ jobs:
           rm -rf wm_node_modules
           rm -rf resources
 
-      - name: Create CNAME file
-        working-directory: repository
-        run: |
-          echo "charts.webmethods.io" > CNAME
-
       - name: Package and index
         run: |
           echo "Begin repository handling and indexing..."
@@ -80,10 +75,10 @@ jobs:
               helm package $subdir
             fi
           done
-          helm repo index --url https://charts.webmethods.io/ .
-
+          helm repo index --url ${{ vars.CHART_REPOSITORY_INDEX_URL }} .
+          
       - name: Install Node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 #v4.0.2
         with:
           node-version: 20
 
@@ -96,7 +91,7 @@ jobs:
         working-directory: generate-ui
         run: |
           cp -r ../repository/* .
-          node generate-ui.js
+          node generate-ui.js "${{ vars.HELM_REPO_ADD_COMMAND }}"
 
       - name: Copy UI files to repository branch
         run: |
@@ -115,8 +110,8 @@ jobs:
         working-directory: repository
         run: |
           # Push changes to the repository branch
-          git config --global user.email "SAGPrivateCloudBot@softwareag.com"
-          git config --global user.name "SAG Private Cloud Bot"
+          git config --global user.email "RefreshChartRepoWorkflow@softwareag.com"
+          git config --global user.name "Refresh Chart Repository Workflow"
           git add .
-          git commit -m "Updating charts repository"
+          git commit -m "Refreshing charts repository"
           git push
