Promoting to production by run 3291670

--- a/.github/workflows/refresh-chart-repo.yml
+++ b/.github/workflows/refresh-chart-repo.yml
@@ -2,7 +2,7 @@ name: Refresh Chart Repository
 
 on:
   push:
-    branches: [ "main", "repository" ]
+    branches: [ "main", "repository", "generate-ui" ]
   workflow_dispatch:
 
 permissions:
