--- a/.github/workflows/refresh-chart-repo.yml
+++ b/.github/workflows/refresh-chart-repo.yml
@@ -91,7 +91,8 @@ jobs:
         working-directory: generate-ui
         run: |
           cp -r ../repository/* .
-          node generate-ui.js '${{ vars.HELM_REPO_ADD_COMMAND }}'
+          generationId=11
+          node generate-ui.js '${{ vars.HELM_REPO_ADD_COMMAND }}' $generationId
 
       - name: Copy UI files to repository branch
         run: |
